--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="https://github.com/tmijs/tmi.js/releases/download/v1.8.5/tmi.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1237.0.min.js"></script>
     <script type="text/javascript" src="./config.js"></script>
-    <script type="text/javascript" src="./src.js"></script>
+    <script type="text/javascript" src="./src/speech.js"></script>
+    <script type="text/javascript" src="./src/src.js"></script>
 </head>
 <body>
 <div id="latest-message">
