--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="https://github.com/tmijs/tmi.js/releases/download/v1.8.5/tmi.min.js"></script>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1237.0.min.js"></script>
     <script type="text/javascript" src="./config.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
@@ -13,7 +11,8 @@
         <span class="text"></span>
     </div>
     <div id="message">
-        <span class="text"></span>
+        <div class="text"></div>
+        <div class="translated-text"></div>
     </div>
 </div>
 </body>
